--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -96,7 +96,7 @@ input {
 }
 .dZkESD {
     padding: 16px;
-    width: 50%;
+    width: 30%;
     font-weight: 500;
     text-align: center;
     border-radius: 20px;
@@ -116,6 +116,8 @@ input {
     will-change: transform;
     transition: transform 450ms ease 0s;
     transform: perspective(1px) translateZ(0px);
+    margin-right: auto;
+    margin-left: auto;
 }
 .bhVlig {
     box-sizing: border-box;
@@ -131,4 +133,9 @@ input {
     color: white;
     border: 0px;
     border-radius: 4px;
+}
+.half-column {
+    width: 65%;
+    margin-right:auto;
+    margin-left:auto;
 }
