Front-end refined + Checking of chain id (only 3 (Ropsten) and 1337 (Ganache) accepted) + Commented and cleaned front-end files + Approve function now increase allowance to maximum + Footer updated + Now the website tells errors/problems via alerts to the user + Added favicon

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -139,3 +139,8 @@ input {
     margin-right:auto;
     margin-left:auto;
 }
+button:disabled, button[disabled] {
+    cursor: auto;
+    background-color: #cccccc;
+    color: #666666;
+}
